--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.32",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.4.0",
     "react-loading-skeleton": "^3.1.0",
