--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.0",
     "react-loading-skeleton": "^3.1.0",
     "react-tooltip": "^4.2.21",
+    "skinview3d": "3.0.0-alpha.1",
     "typescript": "^4.3.2",
     "zustand": "^4.0.0"
   },
